# PoloOS

./: ._Vwpolo.qml  ._poloIV.glb  ._vwpolo.fbx  .gitignore    .gitignore.save  AboutPage.qml  BodyPage.qml  BusStatusCard.qml  CMakeLists.txt  ChassisPage.qml  CockpitWindow.qml  DashboardIcon.qml  DiagnosticsPage.qml  EcuTag.qml  EnergyPage.qml  EngineLive.qml  EnginePage.qml  EngineerRow.qml  Main.qml  MapPage.qml  Polo.qml  SettingsPage.qml  TempCard.qml  VitalsItem.qml  canhandler.h  icons.qrc  main.cpp
.qtcreator/: ._qtc-cmake-presets-XfGNkunA
meshes/: bonnet_ok_001_mesh.mesh  boot_ok_003_mesh.mesh  boot_ok_mesh.mesh  bump_rear_ok_mesh.mesh  bumper_front_ok_mesh.mesh  chassis_003_mesh.mesh  chassis_mesh.mesh  door_lf_ok_003_mesh.mesh  door_lf_ok_mesh.mesh  door_lr_ok_mesh.mesh  door_rf_ok_003_mesh.mesh  door_rf_ok_mesh.mesh  door_rr_ok_mesh.mesh  glass_interior_001_mesh.mesh  imvlm_lighting_mesh.mesh  interior_And_engine_mesh.mesh  speedook_mesh.mesh  steering_ok_mesh.mesh  tahook_mesh.mesh  taillight_red_glass_001_mesh.mesh  vent_001_mesh.mesh  wheel_001_mesh.mesh  windscreen_ok_001_mesh.mesh  wing_lf_ok_001_mesh.mesh  wing_rf_ok_001_mesh.mesh
